--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
     <string name="app_name">Peal</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_activity_month_calendar">Month Calendar</string>
+    <string name="title_activity_recipe_book">Recipe Book</string>
+    <string name="title_activity_day_view">Day View</string>
+    <string name="title_activity_meal_view">Meal View</string>
+    <string name="title_activity_add_food_items">Add Food Items</string>
+    <string name="title_activity_shopping_list">Shopping List</string>
+    <string name="title_activity_bottom_nav">bottom_nav</string>
+    <string name="title_shoppingList">Shopping List</string>
+    <string name="title_calendar">Calendar</string>
+    <string name="title_recipes">Recipes</string>
+    <string name="title_activity_week_calendar">WeekCalendar</string>
+    <string name="title_activity_basic">basicActivity</string>
 </resources>
