--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="food_item">Food Item</string>
     <string name="food_category">Food Category</string>
     <string name="food_measure">Food Measure</string>
+    <string name="search">Search...</string>
 </resources>
