lots again (meals)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="title_activity_month_calendar">Month Calendar</string>
     <string name="title_activity_recipe_book">Recipe Book</string>
     <string name="title_activity_day_view">Day View</string>
-    <string name="title_activity_meal_view">Meal View</string>
     <string name="title_activity_add_food_items">Food Items</string>
     <string name="title_activity_shopping_list">Shopping List</string>
     <string name="title_activity_bottom_nav">bottom_nav</string>
@@ -24,4 +23,7 @@
     <string name="instructions">Instructions:</string>
     <string name="title_activity_single_item">SingleItem</string>
     <string name="default_measure">Default Measure:</string>
+    <string name="title_activity_meal_view">Meal View</string>
+    <string name="portion_size">portion size</string>
+    <string name="recipe_name">Recipe Name</string>
 </resources>
